--- a/pages/FieldManage/index.html
+++ b/pages/FieldManage/index.html
@@ -22,7 +22,7 @@
             <button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('../AddField/index.html')"><i
                     class="fas fa-edit"></i>
                 修改</button>
-            <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('../AddField/index.html')"><i
+            <button type="button" class="btn btn-success navbar-btn listButton" id="addButton" onclick="openAddData('../AddField/index.html',this)"><i
                     class="fa fa-plus" aria-hidden="true"></i> 新建</button>
         </div>
     </nav>
