--- a/pages/MessageDetail/index.html
+++ b/pages/MessageDetail/index.html
@@ -16,7 +16,7 @@
             <a class="navbar-brand" href="#">推送详情</a>
         </div>
         <div>
-            <button type="button" class="btn btn-primary navbar-btn listButton" onclick="openAddData('../MessageManage/index.html')"><i class="fas fa-reply"></i>  返回</button>
+            <button type="button" class="btn btn-primary navbar-btn listButton" id="detailBtn" onclick="openAddData('../MessageManage/index.html',this)"><i class="fas fa-reply"></i>  返回</button>
         </div>
     </nav>
     <div class="list-box">
