--- a/pages/MessageManage/index.html
+++ b/pages/MessageManage/index.html
@@ -24,7 +24,7 @@
             <!-- <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/message/delMessage','GET','id')"><i class="fas fa-trash-alt"></i>
                 删除</button> -->
             <!-- <button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('addNews')"><i class="fas fa-edit"></i> 修改</button> -->
-            <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('../AddMessage/index.html')"><i
+            <button type="button" class="btn btn-success navbar-btn listButton" id="addButton" onclick="openAddData('../AddMessage/index.html',this)"><i
                     class="fa fa-plus" aria-hidden="true"></i> 新建</button>
             <div class="navbar-form navbar-right listSearch">
                 <div class="form-group">
