--- a/pages/AddCompany/index.html
+++ b/pages/AddCompany/index.html
@@ -106,7 +106,7 @@
                         <td>
                             <button type="submit" class="btn btn-success" id="saveButton"><i class="fa fa-check" aria-hidden="true"></i> 添加</button>
                             <button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-times" aria-hidden="true"></i> 取消</button>
-                            <button type="button" class="btn btn-default" id="cancelButtonEdit" style="display:none;"><i class="fa fa-times" aria-hidden="true"></i> 取消</button>
+                            <button type="button" class="btn btn-default" id="cancelButtonEdit" onclick="openList(this,'../CompanyList/index.html')" style="display:none;"><i class="fa fa-times" aria-hidden="true"></i> 取消</button>
                         </td>
                     </tr>
 
