--- a/pages/AddField/index.html
+++ b/pages/AddField/index.html
@@ -30,7 +30,7 @@
                     <tr id="platformCan" style="display:none;">
                         <td align="center">所属公司</td>
                         <td>
-                            <select class="form-control" name="comId" id="companySelect">
+                            <select class="form-control" name="comId" id="companySelect" style="color:#777;">
                                 <option value=""></option>
                             </select>
                         </td>
@@ -38,11 +38,9 @@
                     <tr>
                         <td>&nbsp;</td>
                         <td>
-                            <button type="submit" class="btn btn-success" id="saveBtn"><i class="fa fa-check"
-                                    aria-hidden="true"></i>
-                                添加</button>
-                            <button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-times"
-                                    aria-hidden="true"></i> 取消</button>
+                            <button type="submit" class="btn btn-success" id="saveBtn"><i class="fa fa-check" aria-hidden="true"></i> 添加</button>
+                            <button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-times" aria-hidden="true"></i> 取消</button>
+                            <button type="button" class="btn btn-default" id="cancelButtonEdit" onclick="openList(this,'../FieldManage/index.html')" style="display:none;"><i class="fa fa-times" aria-hidden="true"></i> 取消</button>
                         </td>
                     </tr>
                 </tbody>
