--- a/pages/AddRole/index.html
+++ b/pages/AddRole/index.html
@@ -59,11 +59,9 @@
                     <tr>
                         <td>&nbsp;</td>
                         <td colspan="7">
-                            <button type="submit" class="btn btn-success" id="saveButton"><i class="fa fa-check"
-                                    aria-hidden="true"></i>
-                                添加</button>
-                            <button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-times"
-                                    aria-hidden="true"></i> 取消</button>
+                            <button type="submit" class="btn btn-success" id="saveButton"><i class="fa fa-check" aria-hidden="true"></i>添加</button>
+                            <button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-times" aria-hidden="true"></i> 取消</button>
+                            <button type="button" class="btn btn-default" id="cancelButtonEdit" onclick="openList(this,'../RoleManage/index.html')" style="display:none;"><i class="fa fa-times" aria-hidden="true"></i> 取消</button>
                         </td>
                     </tr>
                 </tbody>
