--- a/pages/AddStageManage/index.html
+++ b/pages/AddStageManage/index.html
@@ -28,7 +28,7 @@
                     <tr id="platformCan" style="display:none;">
                         <td align="center">所属公司</td>
                         <td>
-                            <select class="form-control" name="comId" id="companySelect">
+                            <select class="form-control" name="comId" id="companySelect" style="color:#777;">
                                 <option value=""></option>
                             </select>
                         </td>
