--- a/pages/StageManage/index.html
+++ b/pages/StageManage/index.html
@@ -21,7 +21,7 @@
             <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/permission/deleteStage','GET','stageIds')"><i
                     class="fas fa-trash-alt"></i>删除</button>
             <!-- <button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('add')"><i class="fas fa-edit"></i>修改</button> -->
-            <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('../AddStageManage/index.html')"><i
+            <button type="button" class="btn btn-success navbar-btn listButton" id="addButton" onclick="openAddData('../AddStageManage/index.html',this)"><i
                     class="fa fa-plus" aria-hidden="true"></i> 新建</button>
             <!-- <form class="navbar-form navbar-right listSearch" role="search" method="get" action="__ACTION__">
                     <input name="keyWord" type="text" class="form-control" id="keyWord" placeholder="请输入编号搜索">
