--- a/pages/AddStageManage/index.html
+++ b/pages/AddStageManage/index.html
@@ -36,11 +36,8 @@
                     <tr>
                         <td>&nbsp;</td>
                         <td>
-                            <button type="submit" class="btn btn-success" id="saveBtn"><i class="fa fa-check"
-                                    aria-hidden="true"></i>
-                                添加</button>
-                            <button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-times"
-                                    aria-hidden="true"></i> 取消</button>
+                            <button type="submit" class="btn btn-success" id="saveBtn"><i class="fa fa-check" aria-hidden="true"></i>添加</button>
+                            <button type="button" class="btn btn-default" id="cancelButton" onclick="backOpen('../StageManage/index.html')"><i class="fa fa-times" aria-hidden="true"></i> 取消</button>
                         </td>
                     </tr>
                 </tbody>
