--- a/pages/AddMessage/index.html
+++ b/pages/AddMessage/index.html
@@ -121,7 +121,7 @@
                         <td>&nbsp;</td>
                         <td>
                             <button type="button" class="btn btn-success" id="saveButton"><i class="fa fa-check" aria-hidden="true"></i> 添加</button>
-                            <button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-times" aria-hidden="true"></i> 取消</button>
+                            <button type="button" class="btn btn-default" id="cancelButton"  onclick="backOpen('../MessageManage/index.html')"><i class="fa fa-times" aria-hidden="true"></i> 取消</button>
                         </td>
                     </tr>
                 </tbody>
