--- a/pages/AddUser/index.html
+++ b/pages/AddUser/index.html
@@ -106,7 +106,7 @@
                         <td>&nbsp;</td>
                         <td id="subTd">
                             <button type="submit" class="btn btn-success" id="saveButton"><i class="fa fa-check" aria-hidden="true"></i> <span id="changeTxt">添加</span></button>
-                            <button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-times" aria-hidden="true"></i> 取消</button>
+                            <button type="button" class="btn btn-default" id="cancelButton" onclick="backOpen('../UserList/index.html')"><i class="fa fa-times" aria-hidden="true"></i> 取消</button>
                             <button type="button" class="btn btn-default" id="cancelButtonEdit" onclick="openList(this,'../UserList/index.html')" style="display:none;"><i class="fa fa-times" aria-hidden="true"></i> 取消</button>
                         </td>
                     </tr>
