--- a/pages/About/index.html
+++ b/pages/About/index.html
@@ -78,8 +78,8 @@
                         <td>
                             <button class="btn btn-success" type="button" id="saveButton" target-form="form-horizontal">
                                 <i class="fa fa-save" aria-hidden="true"></i> 保存</button>
-                            <button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-times"
-                                    aria-hidden="true"></i> 取消</button>
+                            <!-- <button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-times"
+                                    aria-hidden="true"></i> 取消</button> -->
                         </td>
                     </tr>
                 </tbody>
